--- a/NeuropaceInternship/templates/edit.html
+++ b/NeuropaceInternship/templates/edit.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Edit your Collaboration</h1>
-  </body>
-</html>
+
+{% macro with_errors(field) %}
+    <div class="form_field">{{ field.label }}:
+    {% if field.errors %}
+        {% set css_class = 'has_error ' + kwargs.pop('class', '') %}
+        {{ field(class=css_class, **kwargs) }}
+        <ul class="errors">{% for error in field.errors %}<li>{{ error|e }}</li>{% endfor %}</ul>
+    {% else %}
+        {{ field(**kwargs) }}
+    {% endif %}
+    </div>
+{% endmacro %}
+{% extends 'base.html' %}
+{% block content %}
+       <h1>Initiation - Edit Collaboration</h1>
+       <form action="" method="POST">
+           {{with_errors(form.entry_date)}}
+           <br>
+           <br>
+           {{with_errors(form.entered_by)}}
+           <br>
+           <br>
+           {{with_errors(form.institution_contact)}}
+           <br>
+           <br>
+           {{with_errors(form.pi)}}
+           {{ form.csrf_token }}
+           <br>
+           <br>
+           <input type="submit" name="" value="Edit Collaboration">
+       </form>
+{% endblock %}
