--- a/NeuropaceInternship/templates/edit.html
+++ b/NeuropaceInternship/templates/edit.html
@@ -10,23 +10,23 @@
     {% endif %}
     </div>
 {% endmacro %}
-{% extends 'base.html' %}
+{% extends 'base_test.html' %}
 {% block content %}
-       <h1>Initiation - Edit Collaboration</h1>
-       <form action="" method="POST">
-           {{with_errors(form.entry_date)}}
-           <br>
-           <br>
-           {{with_errors(form.entered_by)}}
-           <br>
-           <br>
-           {{with_errors(form.institution_contact)}}
-           <br>
-           <br>
-           {{with_errors(form.pi)}}
-           {{ form.csrf_token }}
-           <br>
-           <br>
-           <input type="submit" name="" value="Edit Collaboration">
-       </form>
+   <h1>Initiation - Edit Collaboration</h1>
+   <form action="" method="POST">
+       {{with_errors(form.entry_date)}}
+       <br>
+       <br>
+       {{with_errors(form.entered_by)}}
+       <br>
+       <br>
+       {{with_errors(form.institution_contact)}}
+       <br>
+       <br>
+       {{with_errors(form.pi)}}
+       {{ form.csrf_token }}
+       <br>
+       <br>
+       <input type="submit" name="" value="Edit Collaboration">
+   </form>
 {% endblock %}
