--- a/NeuropaceInternship/templates/index.html
+++ b/NeuropaceInternship/templates/index.html
@@ -1,74 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <title></title>
-  </head>
-  <body>
-    <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">NeuroPace</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar">
-          <form class="navbar-form navbar-left">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Start Collaboration</a></li>
-          <li class="active"><a href="#">Audit Log <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Reports</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-    <h1>Welcome to the Collaboration Station</h1>
-    <h2>All Collaborations</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Entry Date</th>
-          <th>Entered By</th>
-          <th>Institution Contact</th>
-          <th>Principal Investigator</th>
-          <th colspan="2">Options</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for collab in collabs %}
-          <tr>
-            <td>{{ collab.entry_date }}</td>
-            <td>{{ collab.entered_by }}</td>
-            <td>{{ collab.institution_contact }}</td>
-            <td>{{ collab.pi }}</td>
-            <td><a href="/edit/{{ collab.id }}">Edit</a></td>
-            <td><a href="">Destroy</a></td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    <h2>User Collaborations</h2>
-    <table>
+{% extends 'base_test.html' %}
+{% block content %}
+  <h1>Welcome to the Collaboration Station</h1>
+  <h2>All Collaborations</h2>
+  <table>
+    <thead>
       <tr>
         <th>Entry Date</th>
         <th>Entered By</th>
@@ -76,11 +11,33 @@
         <th>Principal Investigator</th>
         <th colspan="2">Options</th>
       </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
-  </body>
-</html>
+    </thead>
+    <tbody>
+      {% for collab in collabs %}
+        <tr>
+          <td>{{ collab.entry_date }}</td>
+          <td>{{ collab.entered_by }}</td>
+          <td>{{ collab.institution_contact }}</td>
+          <td>{{ collab.pi }}</td>
+          <td><a href="/edit/{{ collab.id }}">Edit</a></td>
+          <td><a href="">Destroy</a></td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  <h2>User Collaborations</h2>
+  <table>
+    <tr>
+      <th>Entry Date</th>
+      <th>Entered By</th>
+      <th>Institution Contact</th>
+      <th>Principal Investigator</th>
+      <th colspan="2">Options</th>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+{% endblock %}
