commenting app.py and nav bar adjustments

--- a/NeuropaceInternship/templates/base_test.html
+++ b/NeuropaceInternship/templates/base_test.html
@@ -38,7 +38,7 @@
           </button>
           {% block logo %}
             {% assets "icons/NP_logo.png" %}
-              <img height="80" width="80" src="{{ ASSET_URL }}"/>
+              <img class="navbar-brand" height="80" width="80" src="{{ ASSET_URL }}"/>
             {% endassets %}
           {% endblock %}
           {% block topContent %}
