--- a/NeuropaceInternship/templates/closure.html
+++ b/NeuropaceInternship/templates/closure.html
@@ -15,7 +15,7 @@
        <title>Login Page</title>
   </head>
   <body>
-       <h1>Initiation</h1>
+       <h1>Closure</h1>
        <form action="" method="post">
            {{with_errors(form.entry_date)}}
            <br>
