--- a/NeuropaceInternship/templates/details.html
+++ b/NeuropaceInternship/templates/details.html
@@ -15,7 +15,7 @@
        <title>Login Page</title>
   </head>
   <body>
-       <h1>Initiation</h1>
+       <h1>Project Details</h1>
        <form action="" method="post">
            {{with_errors(form.entry_date)}}
            <br>
@@ -30,7 +30,7 @@
            {{ form.csrf_token }}
            <br>
            <br>
-           <input type="submit" name="" value="Submit Initiation">
+           <input type="submit" name="" value="Submit Details">
        </form>
   </body>
 {% endblock %}
