--- a/NeuropaceInternship/templates/workflow.html
+++ b/NeuropaceInternship/templates/workflow.html
@@ -69,10 +69,37 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class='row'>
-      <div class="col-md-1">
+    <!-- Sidebar for navigation -->
+    {% block sidebar %}
+    <nav class="navbar navbar-default sidebar" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/init">Initiation<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a></li>
+            <li ><a href="/details">Project Details<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a></li>
+            </li>
+            <li ><a href="/contract">Contract & Budget<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-th-list"></span></a></li>
+            <li ><a href="/legal">IRB Docs & Required Language<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-th-list"></span></a></li>
+            <li ><a href="/sharing">Data Sharing<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-th-list"></span></a></li>
+            <li ><a href="/closure">Closure<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-th-list"></span></a></li>
+          </ul>
+        </div>
       </div>
-      <div class='col-md-11' id="container">
+    </nav>
+    {% endblock %}
+
+    <div class='row'>
+      <div class="col-md-2">
+      </div>
+      <div class='col-md-10' id="container">
         <div id="content">
           {% block content %}{% endblock %}
         </div>
