--- a/NeuropaceInternship/templates/closure.html
+++ b/NeuropaceInternship/templates/closure.html
@@ -1,4 +1,5 @@
 {% extends 'workflow.html' %}
+{% set active_page = 'closure'%}
 {% block content %}
   {% macro with_errors(field) %}
       <div class="form_field">{{ field.label }}:
@@ -12,7 +13,7 @@
       </div>
   {% endmacro %}
   <head>
-       <title>Login Page</title>
+       <title>Closure Page</title>
   </head>
   <body>
        <h1>Closure</h1>
@@ -30,7 +31,7 @@
            {{ form.csrf_token }}
            <br>
            <br>
-           <input type="submit" name="" value="Submit Initiation">
+           <input type="submit" name="" value="Submit Closure">
        </form>
   </body>
 {% endblock %}
