--- a/NeuropaceInternship/templates/closure.html
+++ b/NeuropaceInternship/templates/closure.html
@@ -18,19 +18,9 @@
   <body>
        <h1>Closure</h1>
        <form action="" method="post">
-           {{with_errors(form.entry_date)}}
-           <br>
-           <br>
-           {{with_errors(form.entered_by)}}
-           <br>
-           <br>
-           {{with_errors(form.institution_contact)}}
-           <br>
-           <br>
-           {{with_errors(form.pi)}}
+           {{with_errors(form.closure_notes)}}
+           {{with_errors(form.status)}}
            {{ form.csrf_token }}
-           <br>
-           <br>
            <input type="submit" name="" value="Submit Closure">
        </form>
   </body>
