--- a/NeuropaceInternship/templates/contract.html
+++ b/NeuropaceInternship/templates/contract.html
@@ -18,19 +18,15 @@
   <body>
        <h1>Contract</h1>
        <form action="" method="post">
-           {{with_errors(form.entry_date)}}
-           <br>
-           <br>
-           {{with_errors(form.entered_by)}}
-           <br>
-           <br>
-           {{with_errors(form.institution_contact)}}
-           <br>
-           <br>
-           {{with_errors(form.pi)}}
+           {{with_errors(form.funding_source)}}
+           {{with_errors(form.np_consultant)}}
+           {{with_errors(form.np_compensation)}}
+           {{with_errors(form.contract_needed)}}
+           {{with_errors(form.budget_needed)}}
+           {{with_errors(form.contract_notes)}}
+           {{with_errors(form.status)}}
            {{ form.csrf_token }}
-           <br>
-           <br>
+
            <input type="submit" name="" value="Submit Contract">
        </form>
   </body>
