--- a/NeuropaceInternship/templates/legal.html
+++ b/NeuropaceInternship/templates/legal.html
@@ -18,16 +18,10 @@
   <body>
        <h1>IRB Docs & Required Language</h1>
        <form action="" method="post">
-           {{with_errors(form.entry_date)}}
-           <br>
-           <br>
-           {{with_errors(form.entered_by)}}
-           <br>
-           <br>
-           {{with_errors(form.institution_contact)}}
-           <br>
-           <br>
-           {{with_errors(form.pi)}}
+           {{with_errors(form.approval_date)}}
+           {{with_errors(form.approval_by)}}
+           {{with_errors(form.legal_notes)}}
+           {{with_errors(form.status)}}
            {{ form.csrf_token }}
            <br>
            <br>
