Populate dropdown fields

--- a/NeuropaceInternship/templates/details.html
+++ b/NeuropaceInternship/templates/details.html
@@ -28,7 +28,7 @@
            {{with_errors(form.study_identifier)}}
            {{with_errors(form.risk_level)}}
            {{with_errors(form.accessories_needed)}}
-           {{with_errors(form.accessories_needed_language)}}
+           {{with_errors(form.accessories_language)}}
            {{with_errors(form.single_multi_center)}}
            {{ form.csrf_token }}
            <input type="submit" name="" value="Submit Details">
