--- a/NeuropaceInternship/templates/details.html
+++ b/NeuropaceInternship/templates/details.html
@@ -21,15 +21,18 @@
            {{with_errors(form.neuropace_contact)}}
            {{with_errors(form.sharing_method)}}
            {{with_errors(form.study_title)}}
+           {{with_errors(form.description)}}
            {{with_errors(form.dataset_description)}}
            {{with_errors(form.phi_present)}}
            {{with_errors(form.share_type)}}
+           {{with_errors(form.sharing_language)}}
            {{with_errors(form.study_type)}}
            {{with_errors(form.study_identifier)}}
            {{with_errors(form.risk_level)}}
            {{with_errors(form.accessories_needed)}}
            {{with_errors(form.accessories_language)}}
            {{with_errors(form.single_multi_center)}}
+           {{with_errors(form.detail_notes)}}
            {{ form.csrf_token }}
            <input type="submit" name="" value="Submit Details">
        </form>
