--- a/NeuropaceInternship/templates/index.html
+++ b/NeuropaceInternship/templates/index.html
@@ -5,18 +5,19 @@
   <table>
     <thead>
       <tr>
-        <th>Institution Contact</th>
         <th>Status</th>
         <th>Principal Investigator</th>
+        <th>Institution</th>
+
         <th colspan="2">Options</th>
       </tr>
     </thead>
     <tbody>
       {% for collab in collabs %}
         <tr>
-          <td>{{ collab.institution_contact }}</td>
           <td>{{ collab.status.value }}</td>
           <td>{{ collab.pi }}</td>
+          <td>{{ collab.institution }}</td>
           <td><a href="/new/init/{{ collab.id }}">Edit</a></td>
           <td><a href="">Destroy</a></td>
         </tr>
