--- a/NeuropaceInternship/templates/init.html
+++ b/NeuropaceInternship/templates/init.html
@@ -20,6 +20,8 @@
        <form action="{{url_for('new_stage', stage='init', collab_id=collab_id)}}" method="post">
            {{ with_errors(form.entry_date) }}
            {{ with_errors(form.entered_by) }}
+           {{ with_errors(form.date_needed) }}
+           {{ with_errors(form.institution) }}
            {{ with_errors(form.institution_contact) }}
            {{ with_errors(form.pi) }}
            {{ with_errors(form.reason) }}
