--- a/NeuropaceInternship/templates/legal.html
+++ b/NeuropaceInternship/templates/legal.html
@@ -21,6 +21,8 @@
            {{with_errors(form.approval_date)}}
            {{with_errors(form.approval_by)}}
            {{with_errors(form.legal_notes)}}
+           {{with_errors(form.irb_app_date)}}
+           {{with_errors(form.irb_exp_date)}}
            {{with_errors(form.status)}}
            {{ form.csrf_token }}
            <br>
