--- a/NeuropaceInternship/templates/workflow.html
+++ b/NeuropaceInternship/templates/workflow.html
@@ -14,6 +14,9 @@
     {% assets "css/base.css" %}
       <link rel="stylesheet" href="{{ ASSET_URL }}"/>
     {% endassets %}
+    {% assets "css/workflow.css" %}
+      <link rel="stylesheet" href="{{ ASSET_URL }}"/>
+    {% endassets %}
     {% assets "css/side_bar.css" %}
       <link rel="stylesheet" href="{{ ASSET_URL }}"/>
     {% endassets %}
