--- a/NeuropaceInternship/templates/base_test.html
+++ b/NeuropaceInternship/templates/base_test.html
@@ -50,6 +50,7 @@
             <a class="navbar-brand" href="/">NeuroPace</a>
             <h3> {% block text_title %}{% endblock %}</h3>
           {% endblock %}
+          <p class="navbar-user">Current User : {{current_user.username}}</p>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -62,6 +63,8 @@
               <button type="submit" class="btn btn-default">Submit</button>
             </form>
           </ul>
+
+
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/new/init/none">Start Collaboration</a></li>
             <li class="active"><a href="#">Audit Log <span class="sr-only">(current)</span></a></li>
