--- a/NeuropaceInternship/templates/index.html
+++ b/NeuropaceInternship/templates/index.html
@@ -16,10 +16,11 @@
 
   <h1>Welcome to the Collaboration Station</h1>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8 col-md-offset-2">
       <h2>Active Collaborations</h2>
       <a href="/all">Show Archived</a>
-      <table>
+      <table class="table table-striped table-bordered table-sm">
+
         <thead>
           <tr>
             <th>Date Created</th>
@@ -30,14 +31,14 @@
             {% if list == "all" %}
               <th>Archived?</th>
             {% endif %}
-            <th colspan="2">Options</th>
+            <th colspan="3" style="text-align: center">Actions</th>
           </tr>
         </thead>
         <tbody>
           {% for collab in collabs %}
             <tr>
-              <td>{{ collab.utc_2_local(collab.id.generation_time) }}</td>
-              <td>{{ collab.date_mod.strftime('%Y-%m-%d %I:%M:%S') }}</td>
+              <td class="table-date-td">{{ collab.utc_2_local(collab.id.generation_time) }}</td>
+              <td class="table-date-td">{{ collab.date_mod.strftime('%Y-%m-%d %I:%M:%S') }}</td>
               <td>{{ collab.status.value }}</td>
               <td>{{ collab.pi }}</td>
               <td>{{ collab.institution }}</td>
@@ -50,12 +51,13 @@
               {% else %}
                 <td><a href="/archive/{{ collab.id }}">Restore</a></td>
               {% endif %}
+                <td><a href="#">Favorite</a></td>
             </tr>
           {% endfor %}
         </tbody>
       </table>
     </div>
-    <div class="col-md-4">
+    <!-- <div class="col-md-4">
       <h2>User Collaborations</h2>
       <table>
         <tr>
@@ -70,13 +72,14 @@
           <td></td>
         </tr>
       </table>
-    </div>
-    <div class="col-md-4">
+    </div> -->
+    <!-- <div class="col-md-5">
        <h2>Archived Collaborations</h2>
-       <table>
+       <table class="table table-striped table-bordered table-sm">
          <tr>
+           <th>Date Archived</th>
            <th>Status</th>
-           <th>Principal Investigator</th>
+           <th>NeuroPace Contact</th>
            <th>Institution</th>
            {% if list == "all" %}
              <th>Archived?</th>
@@ -86,8 +89,9 @@
          {% for collab in collabs_arch %}
            <tr>
               {% if collab.archive == True %}
+                <td>{{ collab.date_mod.strftime('%Y-%m-%d %I:%M:%S') }}</td>
                 <td>{{ collab.status.value }}</td>
-                <td>{{ collab.pi }}</td>
+                <td>{{ collab.neuropace_contact.value }}</td>
                 <td>{{ collab.institution }}</td>
                 {% if list == "all" %}
                  <td>{{ collab.archive}}</td>
@@ -97,7 +101,7 @@
            </tr>
          {% endfor %}
        </table>
-    </div>
+    </div> -->
   </div>
 
 {% endblock %}
